Updates to Livesharp.Server project to reference a local SSL cert instead of the one supplied by the original programmer. Also removed calls out to the news feed since that site isn't up any more.

--- a/src/LiveSharp.Dashboard/Pages/DebuggerBox.razor
+++ b/src/LiveSharp.Dashboard/Pages/DebuggerBox.razor
@@ -48,7 +48,7 @@
             InvokeAsync(StateHasChanged);
         };
         
-        LoadNews();
+        //LoadNews();
         
         await base.OnInitializedAsync();
     }
