--- a/src/LiveSharp.Server/Components/WelcomeBox.razor
+++ b/src/LiveSharp.Server/Components/WelcomeBox.razor
@@ -43,7 +43,7 @@
     
     protected override void OnInitialized()
     {
-        LoadNews();
+        //LoadNews();
         
         base.OnInitialized();
     }
